--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ tensorboardX == 2.1
 tensorflow-probability >= 0.14.1
 imageio >= 2.9.0
 imageio-ffmpeg >= 0.4.3
-d4rl @ git+https://github.com/Farama-Foundation/d4rl@master#egg=d4rl
+d4rl @ git+https://github.com/rail-berkeley/d4rl@master#egg=d4rl
